<resources>
    <string name="app_name">Ulta Beauty 4.2</string>
    <string name="stateselect_prompt">Select State</string>
    <string name="shipping_info">For questions about shipping policies,please view our shipping information page.</string>
    <string name="qna_contact"> For questions about an order, rewards, account information or customer service issues, please contact us by completing the form here</string>
    <string name="qna_guidelines">Product Q&amp;A Guidelines</string>
    <string name="ask_question_disclaimer">We may post your question and our response on our website. While our goal is to provide you with correct product information we cannot guarantee accuracy or completeness. Please do not include HTML, references to other retailers, pricing, personal information, profane, inflammatory, copyrighted or otherwise inappropriate content in your question. We will respond to your question via email as soon as we can.</string>
    <string name="preview_your_question">Please preview your submission</string>
    <string name="cardtype_prompt">Select Card Type</string>
    <string name="preview_confirmation_test">If you wish to make a change, click the Edit button below, If everything is correct, click the Submit button to continue. Please note that Questions and Answers go through a review and approval process and may not appear immediately</string>
    <string name="confirm_text">Questions may be posted in a public forum. Please do not include HTML, references to other retailers, pricing, personla information, profane, inflammatory, copyrighted or otherwise inappropriate content in your question.</string>
    <string name="congratulations_text">Thank you for submitting your question</string>
    <string name="terms_text">I agree to the Terms &amp; Conditions and</string>
    <string name="privacy_text">Privacy Policy</string>
    <string name="instore_only_msg">Item Available In-Store Only</string>
    <string name="item_not_available_msg">Item No Longer Available</string>
    <string name="month_prompt">Select Month</string>
    <string name="year_prompt">Select Year</string>
    <string name="fragrance">Fragrance</string>
    <string name="olapic_service">//photorankapi-a.akamaihd.net/categories/23825/media/recent?</string>
    <string name="olapic_prod_details">//z4photorankapi-a.akamaihd.net/customers/216180/streams/search?</string>
    <string name="session_ok">OK</string>
    <string name="avatar_url">http://www.assemblergames.com/forums/avatars7/avatar74560_2.gif</string>
    <string name="upload_image_url">//rest.photorank.me/users/1165801176/media?auth_token=35184924054d51039371a49df9c02bcda4613a636f7cb5223a0f08a19f9a0185&amp;version=v2.2</string>
    <string name="stream_uri">//photorankapi-a.akamaihd.net/streams/1165801176</string>
    <string name="search_keyword_item_num">Search Keyword / Item #</string>
    <string name="weekly_ad">CURRENT AD</string>
    <string name="weekly_ad_copyText">Discover the weekly savings</string>
    <string name="new_arrivals">NEW ARRIVALS</string>
    <string name="sale">SALE</string>
    <string name="gift_card_home">GIFT CARD</string>
    <string name="checkout_whats_new">Check out the latest</string>
    <string name="saleOfferText">Snap up fab finds</string>
    <string name="gitfcardText">Give the Gift of Beauty</string>
    <string name="olapicSubText">Show off your #ULTA Beauty Moments!</string>
    <string name="stay_signed_in">Stay Signed In</string>
    <string name="olapic_Home_Heading">GALLERY</string>
    <string name="haul">#Ulta Beauty Gallery</string>
    <string name="post_message">Please enter your message here</string>
    <string name="preview_question">Your Question:</string>
    <string name="preview_txtQuestionDetails">By NN from IL on 01/02/2014</string>
    <string name="preview_notification_mail">Notification Email:</string>
    <string name="preview_notification_mail_id">asker@ulta.com</string>
    <string name="out_of_stock">Out of stock"</string>
    <string name="submit_button">SUBMIT</string>
    <string name="select_option">Select An Option:</string>
    <string name="item_no">Item #:</string>
    <string name="find_in_store">Find In Store</string>
    <string name="excluded_from_coupons">Excluded from Coupons</string>
    <string name="free_gifts_with_purchase">Free Gift with purchase</string>
    <string name="description">Description</string>
    <string name="poduct_details">Details</string>
    <string name="directions">Directions</string>
    <string name="ingredients">Ingredients</string>
    <string name="specifications">Specifications</string>
    <string name="warning">Warning</string>
    <string name="reviews_ratings">Reviews &amp; Ratings</string>
    <string name="review_number">(0)</string>
    <string name="product_q_a">Product Q &amp; A</string>
    <string name="similar_products">Guest Also Bought</string>
    <string name="recent_viewed">Recently viewed</string>
    <string name="upload">UPLOAD</string>
    <string name="price">Price:</string>
    <string name="product_que_ans">Ask an Ulta Beauty Expert about any related questions or concerns</string>
    <string name="ask_question">ASK A QUESTION</string>
    <string name="credit_card_details">Credit Card Details</string>
    <string name="credit_nick_name">* Credit Card Nickname</string>
    <string name="name_on_card">* Name on Card</string>
    <string name="card_type_profile">* Card Type</string>
    <string name="card_number">* Card Number</string>
    <string name="card_expiry_month">Card Expiration Month*</string>
    <string name="card_expiry_year">Card Expiration Year*</string>
    <string name="credit_card_billing_address">Credit Card Billing Address</string>
    <string name="first_name">* First Name :</string>
    <string name="nick_name">* Nickname : </string>
    <string name="last_name">* Last Name :</string>
    <string name="email">* Email (abc@ulta.com)</string>
    <string name="phone">* Phone : </string>
    <string name="address_line1">* Address Line 1</string>
    <string name="address_line2">Address Line 2</string>
    <string name="city">* City : </string>
    <string name="state">* State : </string>
    <string name="country">* Country:</string>
    <string name="zip">* Zip : </string>
    <string name="password">* Password (8-10 characters)</string>
    <string name="re_password">* Re enter Password (8-10 characters)</string>
    <string name="date_of_birth">&#160;Date Of Birth</string>
    <string name="mm_dd">MM/DD</string>
    <string name="date_of_birth_mmdd">&#160;Date Of Birth MMDD</string>
    <string name="default_credit_card">Default Credit Card</string>
    <string name="your_que_processed">Your question is being processed</string>
    <string name="answers">Answers</string>
    <string name="chck_reward_text">Yes, sign me up for ULTA emails</string>
    <string name="join_reward">Join Our Rewards Program</string>
    <string name="sign_me_up">Yes, sign me up!</string>
    <string name="already_member">I Am Already a member</string>
    <string name="no_thanks">No, Thanks.</string>
    <string name="gift_samples">Gift  Samples</string>
    <string name="shipping_address">Shipping Address</string>
    <string name="billing_address">Billing Address</string>
    <string name="payment_details">Payment Details</string>
    <string name="shipping_option">Shipping Options</string>
    <string name="free_samples_added">Free Samples Added</string>
    <string name="free_gifts_added">Free Gifts Added</string>
    <string name="sweet_sophesticated">Sweet and Sopshicated</string>
    <string name="ultamate_rewards_member">Membership Information</string>
    <string name="member_since">Member Since</string>
    <string name="member_">Membership#</string>
    <string name="status">My Status</string>
    <string name="doller_zero">$0</string>
    <string name="points_expiring">Points Expiring</string>
    <string name="my_alerts">My Alerts</string>
    <string name="your_points_expiry">Your points will expire on </string>
    <string name="offers_rewards"> Offers &amp; Rewards</string>
    <string name="benifits">Benefits</string>
    <string name="earning_redeeming">Earn &amp; Redeem</string>
    <string name="platinum_program">Platinum</string>
    <string name="my_points_history">My Points History</string>
    <string name="giftcard_number">GiftCard Number</string>
    <string name="pin">Pin</string>
    <string name="enter_promotion">Enter Promotion / Coupon</string>
    <string name="promotion_coupon">Promotion / Coupon Code</string>
    <string name="fourth_sample_heading">A LITTLE SOMETHING EXTRA</string>
    <string name="webViewTitle_cashStar">Gift Card</string>
    <string name="webViewTitle_weekly_ad">Weekly Ads</string>
    <string name="checkIfMobileWebView">Mobile Web View Content</string>
    <string name="store_status_closed">Closed</string>
    <string name="loading_text">Loading..</string>
    <string name="olapic_terms">TERMS</string>
    <string name="olapic_faq">FAQ</string>
    <string name="olapic_partition">\u0020 | \u0020</string>
    <string name="add_shipping_address_firstname">* First Name</string>
    <string name="add_shipping_address_nickname">* Nickname</string>
    <string name="add_shipping_address_lastname">* Last Name</string>
    <string name="add_shipping_address_address_line1">* Address Line 1</string>
    <string name="add_shipping_address_address_line2">  Address Line 2</string>
    <string name="add_shipping_address_city">* City</string>
    <string name="add_shipping_address_state">* State</string>
    <string name="add_shipping_address_phone">* Phone</string>
    <string name="add_shipping_address_country">* Country</string>
    <string name="add_shipping_address_zip">* Zip</string>
    <string name="add_shipping_address_default_shipping_address">Default Shipping Address</string>
    <string name="answer_text">A: This is the answer for my question!</string>
    <string name="login_btn_signIn">SIGN IN</string>
    <string name="create_account">CREATE ACCOUNT</string>
    <string name="my_acc_points">Points</string>
    <string name="order_num">Order Number</string>
    <string name="item_name_type">Item Name-Type</string>
    <string name="done">DONE</string>
    <string name="prod_name">Product Name </string>
    <string name="brand_name"> Brand Name</string>
    <string name="checkout">Checkout</string>
    <string name="checkout_shipping">SHIPPING</string>
    <string name="checkout_payment">PAYMENT</string>
    <string name="checkout_review_order">REVIEW ORDER</string>
    <string name="environment_prod">PROD</string>
    <string name="environment_prod_caps">PRODUCTION</string>
    <string name="environment_qa">QA</string>
    <string name="environment_dev">DA</string>
    <string name="environment_custom">CUSTOM</string>
    <string name="environment_prod_A">PROD - A</string>
    <string name="environment_prod_B">PROD - B</string>
    <string name="environment_stress">STRESS</string>
    <string name="environment_staging">STAGING</string>
    <string name="environment_uat">UAT</string>
    <string name="environment_qa01">QA1</string>
    <string name="environment_qa02">QA2</string>
    <string name="environment_qa03">QA3</string>
    <string name="environment_da01">DA1</string>
    <string name="environment_da02">DA2</string>
    <string name="environment_da03">DA3</string>
    <string name="action_search">Search</string>
    <string name="action_scan">Scan</string>
    <string name="action_bag">Bag</string>
    <string name="rate_ulta">Rate ULTA Beauty</string>
    <string name="rate_ulta_meassge">We like getting feedback.  Please take a moment and rate our app</string>
    <string name="custom_environment_name_hint">api-uat.com</string>
    <string name="custom_environment_rest_hint">rest/bean</string>
    <string name="custom_environment_secure_hint">https://</string>
</resources>