<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <item
        android:id="@+id/action_search"
        android:icon="@drawable/search_home_icon"
        android:orderInCategory="100"
        android:title="@string/action_search"
        app:showAsAction="always|collapseActionView" />

    <item
        android:id="@+id/action_scan"
        android:icon="@drawable/scan_icon"
        android:orderInCategory="100"
        android:title="@string/action_scan"
        app:showAsAction="always|withText" />
    <item
        android:id="@+id/action_bag"
        android:icon="@drawable/bag_icon"
        android:orderInCategory="100"
        android:title="@string/action_bag"
        app:actionLayout="@layout/tool_bar_bag_icon"
        app:showAsAction="always|withText" />
</menu>