<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:background="@color/white"
    android:orientation="vertical"
    android:padding="5dip" >

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:gravity="right"
        android:orientation="horizontal" >

        <LinearLayout
            android:id="@+id/imageRatingsLayout"
            android:layout_width="50dp"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:visibility="invisible" >
        </LinearLayout>
    </LinearLayout>

    <FrameLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content" >

        <ImageView
            android:id="@+id/selectAnOptionImage"
            android:layout_width="50dip"
            android:layout_height="50dip"
            android:layout_gravity="center"
            android:contentDescription="@string/description" />

        <ImageView
            android:id="@+id/selectAnOptionbadgeImage"
            android:layout_width="25dip"
            android:layout_height="25dip"
            android:layout_gravity="left"
            android:contentDescription="@string/description"
            android:visibility="visible" />
    </FrameLayout>

    <TextView
        android:id="@+id/tvSimilarProductBrandName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/brand_name"
        android:textColor="#000000"
        android:textStyle="bold"
        android:textSize="9sp" >
    </TextView>

    <TextView
        android:id="@+id/tvSimilarProductName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dip"
        android:ellipsize="end"
        android:maxWidth="100dip"
        android:text="@string/prod_name"
        android:textColor="#000000"
        android:textSize="9sp" />

    <TextView
        android:id="@+id/similarProductPrice"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/price"
        android:textColor="@color/black"
        android:textSize="9sp"
        android:visibility="visible" >
    </TextView>

</LinearLayout>