<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:ripple="http://schemas.android.com/apk/res-auto"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@color/white"
    android:orientation="vertical">

    <LinearLayout
        android:padding="24dp"
        style="@style/alert_layout_margin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" >

        <TextView
            android:id="@+id/heading"
            style="@style/login_dialog_heading"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/rate_ulta" />

        <TextView
            android:id="@+id/message"
            style="@style/alert_message"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="@string/rate_ulta_meassge" />
    </LinearLayout>

    <LinearLayout
        style="@style/alert_button_layout_margin"
        android:layout_width="fill_parent"
        android:layout_height="52dp"
        android:gravity="end|bottom"
        android:orientation="horizontal" 
        android:paddingTop="8dp"
        android:paddingBottom="8dp"
        android:paddingRight="8dp"
        android:paddingEnd="8dp">

        <Button
            android:id="@+id/btnAgree"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="36dp"
            android:layout_marginEnd="4dp"
            android:layout_marginRight="4dp"
            android:background="@null"
            android:text="@string/login_btn_signIn"
            android:textColor="#f27a45"
            android:textSize="@dimen/normal_text_Size"
            android:textStyle="normal" >
        </Button>

        <Button
            android:id="@+id/btnDisagree"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="36dp"
            android:layout_marginLeft="4dp"
            android:layout_marginStart="4dp"
            android:background="@null"
            android:text="@string/create_account"
            android:textColor="#f27a45"
            android:textSize="@dimen/normal_text_Size"
            android:textStyle="normal" >
        </Button>
    </LinearLayout>

</LinearLayout>